--- a/index.html
+++ b/index.html
@@ -382,7 +382,86 @@
             </ul>
         </div>
         </div>
-    
+<div class="subscribe-box">
+    <p class="footer-title">Subscribe</p>
+    <form class="subscribe-form">
+        <label class="subscribe-label">
+            <input class="subscribe-input" type="email" name="user-email" placeholder="E-mail" />
+        </label>
+        <button class="subscribe-btn" type="submit" name="subscribe-btn">
+            Subscribe
+            <svg class="subscribe-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+            </svg>
+        </button>
+    </form>
+</div>
+</div>
+</footer>
+
+<div class="backdrop" data-modal>
+    <div class="modal">
+        <button class="modal-close" type="button" data-modal-close>
+            <svg class="close-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-cross"></use>
+            </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form name="contact-form" autocomplete="off">
+            <div class="input-field">
+                <label class="modal-label" for="user-name">Name</label>
+                <div class="modal-input-wrap">
+                    <input class="modal-input" id="user-name" type="text" name="user-name" />
+                    <svg class="modal-input-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-person"></use>
+                    </svg>
+                </div>
+            </div>
+
+            <div class="input-field">
+                <label class="modal-label" for="user-tel">Phone</label>
+                <div class="modal-input-wrap">
+                    <input class="modal-input" id="user-tel" type="tel" name="user-tel" />
+                    <svg class="modal-input-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-phone"></use>
+                    </svg>
+                </div>
+            </div>
+
+            <div class="input-field">
+                <label class="modal-label" for="user-email">Email</label>
+                <div class="modal-input-wrap">
+                    <input class="modal-input" id="user-email" type="email" name="user-email" />
+                    <svg class="modal-input-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-letter"></use>
+                    </svg>
+                </div>
+            </div>
+
+            <div class="input-field commemt-field">
+                <label class="modal-label" for="user-comment">Comment</label>
+                <textarea class="modal-textarea" id="user-comment" name="user-comment"
+                    placeholder="Text input"></textarea>
+            </div>
+
+            <div class="modal-checkbox-wrap">
+                <input class="modal-checkbox-input visually-hidden" id="user-privacy" type="checkbox"
+                    name="user-privacy" value="true" />
+                <label class="modal-checkbox-label" for="user-privacy">
+                    <span class="modal-checkbox-check">
+                        <svg class="modal-checkbox-icon" width="10" height="8">
+                            <use href="./images/icons.svg#icon-checkbox"></use>
+                        </svg>
+                    </span>
+                    I accept the terms and conditions of the
+                    <a class="privacy-policy" href="#">Privacy Policy</a>
+                </label>
+            </div>
+
+            <button class="button" type="submit">Send</button>
+        </form>
+    </div>
+</div>
     </footer>
 </body>
 
