--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <main>
         <section class="section-button">
-            <div class="section-button container">
+            <div class="container-button">
             <h1 class="button-header">Effective Solutions for Your Business </h1>
             <button class="button" type="button">Order Service</button>
         </div>
@@ -92,7 +92,7 @@
                 </div>
         </section>
         <section class="section-team">
-            <div class="team-section container">
+            <div class="team-section">
             <h2 class="team">Our Team</h2>
             <ul class="team-list">
                 <li class="team-cards">
@@ -252,7 +252,7 @@
         </section>
 
         <section class="section-portfolio">
-            <div class="container">
+            <div class="portfolio-container">
             <h2 class="portfolio">Our Portfolio</h2>
             <ul class="project-cards">
                 <li class="portfolio-item">
