--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        < class="footer-container">
             <div class="footer-logo-text">
         <a class="end-logo" href="./index.html"> Web <span class="end-studio">Studio</span></a>
         <p class="para">Increase the flow of customers and sales for your business with digital marketing & growth
@@ -381,7 +381,7 @@
                 </li>
             </ul>
         </div>
-        </div>
+    
 <div class="subscribe-box">
     <p class="footer-title">Subscribe</p>
     <form class="subscribe-form">
