--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     </main>
 
     <footer class="footer">
-        < class="footer-container">
+        <div class="footer-container">
             <div class="footer-logo-text">
         <a class="end-logo" href="./index.html"> Web <span class="end-studio">Studio</span></a>
         <p class="para">Increase the flow of customers and sales for your business with digital marketing & growth
