--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             solutions.</p>
         </div>
         <div class="footer-socials-media">
-            <p class="footer-socials-title">Social media</p>
+            <p class="footer-title">Social media</p>
             <ul class="footer-socials">
                 <li class="footer-socials-item">
                     <a class="link" href="#" target="_blank">
@@ -391,7 +391,7 @@
         <button class="subscribe-btn" type="submit" name="subscribe-btn">
             Subscribe
             <svg class="subscribe-btn-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-plane"></use>
+                <use href="./images/icons.svg#icon-send"></use>
             </svg>
         </button>
     </form>
