--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
             <div class="modal-checkbox-wrap">
                 <input class="modal-checkbox-input visually-hidden" id="user-privacy" type="checkbox"
-                    name="user-privacy" value="true" />
+                    name="user-privacy" value="true"  required />
                 <label class="modal-checkbox-label" for="user-privacy">
                     <span class="modal-checkbox-check">
                         <svg class="modal-checkbox-icon" width="10" height="8">
