--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             </div>
 
             <div class="modal-checkbox-wrap">
-                <input class="modal-checkbox-input visually-hidden" id="user-privacy" type="checkbox"
+                <input class="modal-checkbox-input hidden" id="user-privacy" type="checkbox"
                     name="user-privacy" value="true"  required />
                 <label class="modal-checkbox-label" for="user-privacy">
                     <span class="modal-checkbox-check">
