--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         <section class="feature-section">
             <div class="container">
-            <h2 class="hidden">Our features</h2>
+            <h2 class="visually-hidden">Our features</h2>
             <ul class="section-list">
                 <li class="activities">
                     <div class="features-picture">
@@ -445,7 +445,7 @@
             </div>
 
             <div class="modal-checkbox-wrap">
-                <input class="modal-checkbox-input hidden" id="user-privacy" type="checkbox"
+                <input class="modal-checkbox-input visually-hidden" id="user-privacy" type="checkbox"
                     name="user-privacy" value="true"  required />
                 <label class="modal-checkbox-label" for="user-privacy">
                     <span class="modal-checkbox-check">
